navbar changed to add home tab

--- a/4x4ElectricWheelchairs.html
+++ b/4x4ElectricWheelchairs.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Portfolio | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<title>Observer Mobility: 4x4 Electric Wheelchairs</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
-	<meta name="author" content="The Develovers">
+	<meta name="description" content="Observer Mobility: 4x4 Electric Wheelchairs">
+	<meta name="author" content="www.EveryDayKenneth.com">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
 	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -84,6 +84,9 @@
 				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
+							<a href="index.html">HOME</a>
+						</li>
+						<li>
 							<a href="aboutus.html">ABOUT</a>
 						</li>
 						<li class="dropdown ">
@@ -101,9 +104,9 @@
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="4x4ElectricWheelchairs.html">Customer Support </a></li>
+								<li><a href="customersupport.html">Customer Support </a></li>
 								<li class="dropdown ">
-									<a href="accessories.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
+									<a href="contactUs.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
 								</li>
 							</ul>
 						</li>
@@ -143,42 +146,42 @@
 						<li class="portfolio-item design">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">OB-EW-001</h4>
-								<p class="brief-description">The Expensive One</p>
-								<a href="OB-EW-001.html" class="btn">read more</a>
+								<h4 class="title">Maximus</h4>
+								<p class="brief-description">OB-EW-001</p>
+								<a href="OB-EW-001.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-001.png" alt="This is the description">
+								<img src="assets/img/portfolio/800x800/OB-EW-001.png" alt="The Maximux 800x800 thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item ux">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">OB-EW-002</h4>
-								<p class="brief-description">The Second One</p>
-								<a href="OB-EW-002.html" class="btn">read more</a>
+								<h4 class="title">Off Road</h4>
+								<p class="brief-description">OB-EW-002</p>
+								<a href="OB-EW-002.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/OB-EW-002.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/OB-EW-002.png" alt="The Off Road 800x800 thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">OB-EW-003</h4>
-								<p class="brief-description">The Third One</p>
-								<a href="OB-EW-003.html" class="btn">read more</a>
+								<h4 class="title">Optimus</h4>
+								<p class="brief-description">OB-EW-003</p>
+								<a href="OB-EW-003.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work4.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/OB-EW-003.jpg" alt="Optimus 800x800 thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography ux">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">OB-EW-020</h4>
-								<p class="brief-description">The 20th One</p>
-								<a href="OB-EW-020.html" class="btn">read more</a>
+								<h4 class="title">R-020</h4>
+								<p class="brief-description">OB-EW-020</p>
+								<a href="OB-EW-020.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/OB-EW-020.jpg" alt="Portfolio Thumbnail">
@@ -187,47 +190,16 @@
 						<li class="portfolio-item photography ui">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">OB-EW-030</h4>
-								<p class="brief-description">The Thirtieth One</p>
-								<a href="OB-EW-030.html" class="btn">read more</a>
+								<h4 class="title">R-030</h4>
+								<p class="brief-description">OB-EW-030</p>
+								<a href="OB-EW-030.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/OB-EW-030.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
-						<li class="portfolio-item photography">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">OB-EW-050</h4>
-								<p class="brief-description">The Fiftyth One</p>
-								<a href="#" class="btn">read more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work7.png" alt="Portfolio Thumbnail">
-							</div>
-						</li>
-						<li class="portfolio-item photography">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">Magical Tea</h4>
-								<p class="brief-description">Photography</p>
-								<a href="#" class="btn">read more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work8.png" alt="Portfolio Thumbnail">
-							</div>
-						</li>
-						<li class="portfolio-item ui">
-							<div class="overlay"></div>
-							<div class="info">
-								<h4 class="title">Skyscraper</h4>
-								<p class="brief-description">UI Design</p>
-								<a href="#" class="btn">read more</a>
-							</div>
-							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
-							</div>
-						</li>
+
+
 					</ul>
 				</div>
 				<!-- END PORTFOLIO ITEM WRAPPER -->
@@ -254,7 +226,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
@@ -321,7 +293,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 Observer Mobility. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
