--- a/accessories.html
+++ b/accessories.html
@@ -84,6 +84,9 @@
 				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
+							<a href="index.html">HOME</a>
+						</li>
+						<li>
 							<a href="aboutus.html">ABOUT</a>
 						</li>
 						<li class="dropdown ">
@@ -101,9 +104,9 @@
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="4x4ElectricWheelchairs.html">Customer Support </a></li>
+								<li><a href="customersupport.html">Customer Support </a></li>
 								<li class="dropdown ">
-									<a href="accessories.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
+									<a href="contactUs.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
 								</li>
 							</ul>
 						</li>
