--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
+							<a href="index.html">HOME</a>
+						</li>
+						<li>
 							<a href="aboutus.html">ABOUT</a>
 						</li>
 						<li class="dropdown ">
