products page updated

--- a/OB-EW-001.html
+++ b/OB-EW-001.html
@@ -25,7 +25,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
 	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -84,10 +84,10 @@
 				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="aboutus.html">ABOUT</a>
+							<a href="index.html">HOME</a>
 						</li>
 						<li>
-							<a href="#services">SERVICES</a>
+							<a href="aboutus.html">ABOUT</a>
 						</li>
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
@@ -99,10 +99,16 @@
 							</ul>
 						</li>
 						<li>
-							<a href="#pricing">PRICING</a>
+							<a href="news.html">NEWS</a>
 						</li>
-						<li>
-							<a href="contactUs.html">CONTACT US</a>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="customersupport.html">Customer Support </a></li>
+								<li class="dropdown ">
+									<a href="contactUs.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
@@ -113,11 +119,11 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">OB-EW-001</h1>
+				<h1 class="page-title pull-left">Maximus: OB-EW-001</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Products</a></li>
 					<li><a href="#">4x4 Electric Wheelchairs</a></li>
-					<li class="active">OB-EW-001</li>
+					<li class="active">Maximus: OB-EW-001</li>
 				</ol>
 			</div>
 		</div>
@@ -127,26 +133,26 @@
 			<div class="container">
 				<!-- PORTFOLIO ITEM -->
 				<div class="portfolio-media media-carousel">
-					<div><img src="assets/img/portfolio/single/bicycle.jpg" class="img-responsive" alt="Portfolio Item"></div>
-					<div><img src="assets/img/portfolio/single/blurred_lines.jpg" class="img-responsive" alt="Portfolio Item"></div>
-					<div><img src="assets/img/portfolio/single/edge.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/001-a.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/001-b.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/001-c.jpg" class="img-responsive" alt="Portfolio Item"></div>
 				</div>
 				<div class="row">
 					<div class="col-md-8">
 						<section>
-							<h2 class="section-heading">OB-EW-001 DESCRIPTION</h2>
+							<h2 class="section-heading">Maximus: OB-EW-001 DESCRIPTION</h2>
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
 							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
 						</section>
 					</div>
 					<div class="col-md-4">
 						<div class="featured-video">
-							<iframe src="//player.vimeo.com/video/40056491"></iframe>
+<iframe width="330" height="315" src="https://www.youtube.com/embed/2pbDIlq-OpM" frameborder="0" allowfullscreen></iframe>
 						</div>
 						<section>
-							<h2 class="section-heading">OB-EW-001 DETAILS</h2>
+							<h2 class="section-heading">Maximus: OB-EW-001 DETAILS</h2>
 							<ul class="list-unstyled project-detail-list">
-								<li><strong>Name:</strong> OB-EW-001</li>
+								<li><strong>Name:</strong> Maximus: OB-EW-001</li>
 								<li><strong>Client:</strong> Digital House Inc.</li>
 								<li><strong>Skills:</strong> Climbing, Hunting, Research</li>
 								<li><strong>Categories:</strong> <a href="#">The Dog Walker</a>, <a href="#">Corporate</a> </li>
@@ -157,47 +163,56 @@
 				<!-- END PORTFOLIO ITEM -->
 				<hr>
 				<!-- RELATED PORTFOLIO -->
-				<div class="portfolio-item-wrapper portfolio-related">
-					<h2 class="section-heading">RELATED WORKS</h2>
-					<ul class="portfolio-item-list spaced row">
-						<li class="col-md-4">
+		<section class="recent-works">
+			<div class="container">
+				<h2 class="section-heading pull-left">FEATURED PRODUCTS</h2>
+				<a href="4x4ElectricWheelchairs.html" class="btn btn-primary pull-right">See all products</a>
+				<div class="clearfix"></div>
+				<div class="portfolio-static">
+					<div class="row">
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">The Guitar</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Maximus</h4>
+									<p class="brief-description">OB-EW-001</p>
+									<a href="OB-EW-001.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work1.png" alt="This is the description">
+									<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-						<li class="col-md-4">
+						</div>
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Skyscraper</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Off Road</h4>
+									<p class="brief-description">OB-EW-002</p>
+									<a href="OB-EW-002.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work3.png" alt="Portfolio Thumbnail">
+									<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-						<li class="col-md-4">
+						</div>
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Heaven</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Optimus</h4>
+									<p class="brief-description">OB-EW-003</p>
+									<a href="OB-EW-003.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work4.png" alt="Portfolio Thumbnail">
+									<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</div>
+			</div>
+		</section>
 				<!-- END RELATED PORTFOLIO -->
 			</div>
 		</div>
@@ -209,7 +224,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
@@ -266,8 +281,8 @@
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="rss-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
@@ -276,7 +291,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 Observer Mobility. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
@@ -289,7 +304,7 @@
 	<script src="assets/js/plugins/slick/slick.min.js"></script>
 	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
 	<script src="assets/js/repute-scripts.js"></script>
-	
+	<script src="assets/js/plugins/fitvids/jquery.fitvids.js"></script>
 </body>
 
 </html>
