--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">OB-EW-001</h4>
-									<p class="brief-description">The Best One</p>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Maximus</h4>
+									<p class="brief-description">OB-EW-001</p>
+									<a href="#" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
 									<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
@@ -265,9 +265,9 @@
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">OB-EW-002</h4>
-									<p class="brief-description">The Silver Medalist</p>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Off Road</h4>
+									<p class="brief-description">OB-EW-002</p>
+									<a href="#" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
 									<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
@@ -278,9 +278,9 @@
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">OB-EW-003</h4>
-									<p class="brief-description">Third Place Love</p>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Optimus</h4>
+									<p class="brief-description">OB-EW-003</p>
+									<a href="#" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
 									<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
