--- a/OB-EW-002.html
+++ b/OB-EW-002.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Portfolio | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<title>Observer Mobility: OB-EW-002</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
-	<meta name="author" content="The Develovers">
+	<meta name="description" content="OB-EW-002">
+	<meta name="author" content="WWW.EveryDayKenneth.com">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
 	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -71,166 +71,43 @@
 					</div>
 				</div>
 				<!-- END TOPBAR -->
-				<div class="navbar-header">
+				<div class="navbar-header" style="padding-bottom: 50px;"> 
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
 						<span class="sr-only">Toggle Navigation</span>
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/repute-logo-nav.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/observer225x150.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
-				<div id="main-nav" class="navbar-collapse collapse navbar-mega-menu">
+				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="index.html">HOME</a>
+						</li>
+						<li>
+							<a href="aboutus.html">ABOUT</a>
+						</li>
 						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">HOME <i class="fa fa-angle-down"></i></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="index.html">Home v1</a></li>
-								<li><a href="index-v1_dark-header.html">Home v1 Dark Header</a></li>
-								<li><a href="index-v1_light-footer.html">Home v1 Light Footer</a></li>
-								<li><a href="index-v2.html">Home v2</a></li>
-								<li><a href="index-v2_dark-header.html">Home v2 Dark Header</a></li>
-								<li><a href="index-v3.html">Home v3</a></li>
-								<li><a href="index-v4_fullscreen.html">Home v4 Fullscreen</a></li>
-								<li><a href="index-v5_fullscreen_slider.html">Home v5 Fullscreen Slider</a></li>
+								<li><a href="4x4ElectricWheelchairs.html">4X4 Electric Wheelchairs</a></li>
 								<li class="dropdown ">
-									<a href="#">Blog Home <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-right"></i></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="blog/index-blog-v1.html">Blog Home v1</a></li>
-										<li><a href="blog/index-blog-v2.html">Blog Home v2</a></li>
-									</ul>
+									<a href="accessories.html">Accessories <span class="label label-danger label-main-nav">NEW</span></a>
 								</li>
-								<li><a href="one-page/index.html">One Page</a></li>
 							</ul>
 						</li>
+						<li>
+							<a href="news.html">NEWS</a>
+						</li>
 						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">FEATURES  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="feature-navigation-menu.html">Navigation Menus</a></li>
-								<li><a href="feature-hero-unit.html">Hero Units</a></li>
-								<li><a href="feature-page-header.html">Page Header</a></li>
-								<li><a href="feature-footer.html">Footers</a></li>
+								<li><a href="customersupport.html">Customer Support </a></li>
 								<li class="dropdown ">
-									<a href="#">Email Templates <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-right"></i></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="email-templates/email-template-v1/email-template-v1.html">Email Template v1</a></li>
-										<li><a href="email-templates/email-template-v2/email-template-v2.html">Email Template v2</a></li>
-									</ul>
+									<a href="contactUs.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
 								</li>
-							</ul>
-						</li>
-						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <i class="fa fa-angle-down"></i></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="page-services.html">Service Page</a></li>
-								<li><a href="page-pricing-tables.html">Pricing Tables</a></li>
-								<li class="dropdown ">
-									<a href="#">Columns <i class="fa fa-angle-right"></i></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="page-left-sidebar.html">Left Sidebar</a></li>
-										<li><a href="page-right-sidebar.html">Right Sidebar</a></li>
-										<li><a href="page-double-sidebar.html">Double Sidebar</a></li>
-									</ul>
-								</li>
-								<li><a href="page-search-results.html">Search Result</a></li>
-								<li><a href="page-support.html">Support</a></li>
-								<li><a href="page-faq.html">FAQ</a></li>
-								<li><a href="page-about-us.html">About Us</a></li>
-								<li><a href="page-contacts.html">Contact</a></li>
-								<li><a href="page-privacy.html">Privacy Policy</a></li>
-								<li><a href="page-terms.html">Terms</a></li>
-								<li><a href="page-error.html">Error Page</a></li>
-								<li class="dropdown ">
-									<a href="#">Sub Menu Lvl 1 <i class="fa fa-angle-right"></i></a>
-									<ul class="dropdown-menu" role="menu">
-										<li class="dropdown ">
-											<a href="#">Sub Menu Lvl 2 <i class="fa fa-angle-right"></i></a>
-											<ul class="dropdown-menu" role="menu">
-												<li><a href="#">Sub Menu Lvl 3</a></li>
-												<li><a href="#">Sub Menu Lvl 3</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Sub Menu Lvl 2</a></li>
-										<li><a href="#">Sub Menu Lvl 2</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li class="dropdown mega-menu">
-							<a href="#" data-toggle="dropdown">UI ELEMENTS <i class="fa fa-angle-down"></i></a>
-							<ul class="dropdown-menu mega-menu-container">
-								<li>
-									<div class="mega-menu-content">
-										<div class="row">
-											<div class="col-md-3">
-												<h5 class="menu-heading">Buttons &amp; Icons</h5>
-												<ul class="list-unstyled list-menu">
-													<li><a href="ui-buttons.html"><i class="fa fa-square"></i> General Buttons</a></li>
-													<li><a href="ui-button-groups.html"><i class="fa fa-clone"></i> Button Groups</a></li>
-													<li><a href="ui-icons.html"><i class="fa fa-asterisk"></i> Icons</a></li>
-												</ul>
-											</div>
-											<div class="col-md-3">
-												<h5 class="menu-heading">Forms</h5>
-												<ul class="list-unstyled list-menu">
-													<li><a href="ui-form-elements-basic.html"><i class="fa fa-check-square"></i> Basic Form Elements</a></li>
-													<li><a href="ui-form-elements-advanced.html"><i class="fa fa-plus-square"></i> Advanced Form Elements</a></li>
-													<li><a href="ui-form-layouts.html"><i class="fa fa-columns"></i> Form Layouts</a></li>
-													<li><a href="ui-form-validation.html"><i class="fa fa-check-circle"></i> Validation</a></li>
-												</ul>
-											</div>
-											<div class="col-md-3">
-												<h5 class="menu-heading">Content Elements</h5>
-												<ul class="list-unstyled list-menu">
-													<li><a href="ui-tabs-accordion.html"><i class="fa fa-list-alt"></i> Tabs &amp; Accordion</a></li>
-													<li><a href="ui-boxed-contents.html"><i class="fa fa-suitcase"></i> Boxed Contents</a></li>
-													<li><a href="ui-numbers-charts.html"><i class="fa fa-pie-chart"></i> Numbers &amp; Charts</a></li>
-													<li><a href="ui-typography.html"><i class="fa fa-font"></i> Typography</a></li>
-												</ul>
-											</div>
-											<div class="col-md-3">
-												<h5 class="menu-heading">Components</h5>
-												<ul class="list-unstyled list-menu">
-													<li><a href="ui-testimonials.html"><i class="fa fa-thumbs-up"></i> Testimonials</a></li>
-													<li><a href="ui-maps.html"><i class="fa fa-map"></i> Maps</a></li>
-													<li><a href="ui-breadcrumbs.html"><i class="fa fa-angle-right"></i> Breadcrumbs</a></li>
-													<li><a href="ui-alerts.html"><i class="fa fa-warning"></i> Alerts</a></li>
-													<li><a href="ui-pagination.html"><i class="fa fa-ellipsis-h"></i> Pagination</a></li>
-												</ul>
-											</div>
-										</div>
-									</div>
-								</li>
-							</ul>
-						</li>
-						<li class="dropdown active">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PORTFOLIO <i class="fa fa-angle-down"></i></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="portfolio-4-columns.html">Portfolio 4 Columns</a></li>
-								<li><a href="portfolio-3-columns.html">Portfolio 3 Columns</a></li>
-								<li><a href="portfolio-2-columns.html">Portfolio 2 Columns</a></li>
-								<li class="active"><a href="#">Portfolio Item</a></li>
-							</ul>
-						</li>
-						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">SHOP <i class="fa fa-angle-down"></i></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="shop/index.html">Front Page</a></li>
-								<li><a href="shop/single-product-page.html">Single Product Page</a></li>
-								<li><a href="shop/product-filter-grid.html">Search Result with Filter</a></li>
-								<li><a href="shop/checkout.html">Checkout with Validation</a></li>
-								<li><a href="shop/shop-login.html">Login</a></li>
-								<li><a href="shop/shop-register.html">Register</a></li>
-							</ul>
-						</li>
-						<li class="dropdown ">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">BLOG <i class="fa fa-angle-down"></i></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="blog-medium-thumbnail.html">Blog Medium Thumbnail</a></li>
-								<li><a href="blog-full-thumbnail.html">Blog Full Thumbnail</a></li>
-								<li><a href="blog-single.html">Blog Single</a></li>
-								<li><a href="blog-single-full.html">Blog Single Full</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -242,11 +119,11 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">PORTFOLIO</h1>
+				<h1 class="page-title pull-left">Off Road: OB-EW-002</h1>
 				<ol class="breadcrumb">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li class="active">Portfolio Item</li>
+					<li><a href="#">Products</a></li>
+					<li><a href="#">4x4 Electric Wheelchairs</a></li>
+					<li class="active">Off Road: OB-EW-002</li>
 				</ol>
 			</div>
 		</div>
@@ -256,75 +133,86 @@
 			<div class="container">
 				<!-- PORTFOLIO ITEM -->
 				<div class="portfolio-media media-carousel">
-					<div><img src="assets/img/portfolio/single/bicycle.jpg" class="img-responsive" alt="Portfolio Item"></div>
-					<div><img src="assets/img/portfolio/single/blurred_lines.jpg" class="img-responsive" alt="Portfolio Item"></div>
-					<div><img src="assets/img/portfolio/single/edge.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/001-a.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/001-b.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/001-c.jpg" class="img-responsive" alt="Portfolio Item"></div>
 				</div>
 				<div class="row">
 					<div class="col-md-8">
 						<section>
-							<h2 class="section-heading">PROJECT DESCRIPTION</h2>
+							<h2 class="section-heading">Off Road: OB-EW-002 DESCRIPTION</h2>
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
 							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
 						</section>
 					</div>
 					<div class="col-md-4">
+						<div class="featured-video">
+<iframe width="330" height="315" src="https://www.youtube.com/embed/2pbDIlq-OpM" frameborder="0" allowfullscreen></iframe>
+						</div>
 						<section>
-							<h2 class="section-heading">PROJECT DETAIL</h2>
+							<h2 class="section-heading">Off Road: OB-EW-002 DETAILS</h2>
 							<ul class="list-unstyled project-detail-list">
-								<li><strong>Title:</strong> Awesome Photography</li>
+								<li><strong>Name:</strong> Off Road: OB-EW-002</li>
 								<li><strong>Client:</strong> Digital House Inc.</li>
-								<li><strong>Skills:</strong> Photography, Lightroom, Photoshop</li>
-								<li><strong>Categories:</strong> <a href="#">Photography</a>, <a href="#">Corporate</a> </li>
+								<li><strong>Skills:</strong> Climbing, Hunting, Research</li>
+								<li><strong>Categories:</strong> <a href="#">The Dog Walker</a>, <a href="#">Corporate</a> </li>
 							</ul>
-							<a href="#" class="btn btn-default"><i class="fa fa-external-link"></i> Visit Website</a>
 						</section>
 					</div>
 				</div>
 				<!-- END PORTFOLIO ITEM -->
 				<hr>
 				<!-- RELATED PORTFOLIO -->
-				<div class="portfolio-item-wrapper portfolio-related">
-					<h2 class="section-heading">RELATED WORKS</h2>
-					<ul class="portfolio-item-list spaced row">
-						<li class="col-md-4">
+		<section class="recent-works">
+			<div class="container">
+				<h2 class="section-heading pull-left">FEATURED PRODUCTS</h2>
+				<a href="4x4ElectricWheelchairs.html" class="btn btn-primary pull-right">See all products</a>
+				<div class="clearfix"></div>
+				<div class="portfolio-static">
+					<div class="row">
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">The Guitar</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Maximus</h4>
+									<p class="brief-description">OB-EW-001</p>
+									<a href="OB-EW-001.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work1.png" alt="This is the description">
+									<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-						<li class="col-md-4">
+						</div>
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Skyscraper</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Off Road</h4>
+									<p class="brief-description">OB-EW-002</p>
+									<a href="OB-EW-002.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work3.png" alt="Portfolio Thumbnail">
+									<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-						<li class="col-md-4">
+						</div>
+						<div class="col-md-4">
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Heaven</h4>
-									<a href="#" class="btn">read more</a>
+									<h4 class="title">Optimus</h4>
+									<p class="brief-description">OB-EW-003</p>
+									<a href="OB-EW-003.html" class="btn">learn more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work4.png" alt="Portfolio Thumbnail">
+									<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</div>
+			</div>
+		</section>
 				<!-- END RELATED PORTFOLIO -->
 			</div>
 		</div>
@@ -336,7 +224,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
@@ -393,8 +281,8 @@
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="rss-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
@@ -403,7 +291,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 Observer Mobility. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
@@ -416,7 +304,7 @@
 	<script src="assets/js/plugins/slick/slick.min.js"></script>
 	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
 	<script src="assets/js/repute-scripts.js"></script>
-	
+	<script src="assets/js/plugins/fitvids/jquery.fitvids.js"></script>
 </body>
 
 </html>
